<resources>
    <string name="app_name">Intranet Epitech</string>
    <string name="title_profile">Profil</string>
    <string name="title_marks">Notes</string>
    <string name="title_modules">Modules</string>
    <string name="title_projects">Projects</string>
    <string name="title_schedule">Planning</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="misc">Misc</string>
    <string name="deconnexion">Déconnexion</string>

    <string name="search_hint">Chercher</string>

    <string name="noinfos">Aucune information à afficher</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales sagittis molestie.</string>

    <!-- Values of login -->

    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="login">Login</string>
    <string name="passwd">Mot de Passe Unix</string>
    <string name="action_sign_in">Connexion</string>

    <!-- Values of profile -->

    <string name="student_img_desc">Student Img</string>
    <string name="login_n">login_n</string>
    <string name="email">login_n@epitech.eu</string>
    <string name="gpa">GPA :</string>
    <string name="promo">Promo :</string>
    <string name="semester">Semestre :</string>
    <string name="credits">Crédits :</string>
    <string name="na">n/a</string>
    <string name="exit">Se déconnecter ?</string>

    <!-- Values of messages -->
    <string name="profile_img_desc">Profile Img</string>
    <string name="date">2042-01-24 23:42:00</string>

    <!-- Values of marks -->
    <string name="mark_img_desc">Mark Background</string>
    <string name="mark">42</string>
    <string name="corrector">corrector_l</string>
    <string name="project">Project</string>
    <string name="module">Module</string>

    <string name="action_search">Chercher</string>
    <string name="action_nb">Nombre à afficher</string>
    <string name="action_semester">Semestre</string>

    <string name="numberofmarks">Nombre de notes à afficher</string>
    <string-array name="number_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>Toutes</item>
    </string-array>
    <string name="choose">OK</string>
    <string name="semester_choice">Semestre à afficher</string>
    <string-array name="semester_array">
        <item>Semestre 0</item>
        <item>Semestre 1</item>
        <item>Semestre 2</item>
        <item>Semestre 3</item>
        <item>Semestre 4</item>
        <item>Semestre 5</item>
        <item>Semestre 6</item>
        <item>Semestre 7</item>
        <item>Semestre 8</item>
        <item>Semestre 9</item>
        <item>Semestre 10</item>
        <item>Tous</item>
    </string-array>

    <!-- Values of modules -->
    <string name="grade_img_desc">Grade Background</string>
    <string name="grade">A</string>
    <string name="timeline">2042-01-24 -> 2042-01-42</string>
    <string name="codemodule">G-EPI-42</string>

    <string name="numberofmodules">Nombre de module à afficher</string>

    <!-- Values of projects -->

    <string name="numberofprojects">Nombre de projects à afficher</string>

    <!-- Values of Schedule -->

    <string name="action_registered">Evènements inscrits</string>
    <string name="action_modules">Evènements des modules enregistrés</string>
    <string name="action_all">Tous les évènements</string>

</resources>
