<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_marks"
            android:title="@string/title_marks" />
        <item
            android:id="@+id/nav_modules"
            android:icon="@drawable/ic_modules"
            android:title="@string/title_modules" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_projects"
            android:title="@string/title_projects" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/title_planning" />
    </group>

    <item android:title="@string/misc">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/deconnexion" />
        </menu>
    </item>
</menu>
