<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <FrameLayout
                android:id="@+id/grade_container"
                android:layout_width="60dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true">
                <ImageView
                    android:id="@+id/list_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/list_icon_bg"
                    android:elevation="6dp"
                    android:contentDescription="@string/grade_img_desc" />

                <TextView
                    android:id="@+id/grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:textColor="#fff"
                    android:text="@string/grade"
                    android:elevation="10dp"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/date"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_toEndOf="@+id/grade_container"
                android:layout_marginStart="16dp"
                android:text="@string/module" />

            <TextView
                android:id="@+id/codemodule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/module"
                android:layout_marginTop="16dp"
                android:text="@string/codemodule"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>