<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        card_view:cardBackgroundColor="@color/cardview_dark_background"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/background"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/student_img_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/montpellier" />

            <ImageView
                android:id="@+id/student_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/background"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/student_img_desc" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/semester"
                android:layout_centerHorizontal="true"
                android:text="@string/login_n"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"
                android:text="@string/email"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/gpa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/background"
                android:layout_toStartOf="@+id/gpa_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="16dp"
                android:text="@string/gpa"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gpa_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/background"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/na"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/background"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="16dp"
                android:text="@string/promo"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/promo_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/background"
                android:layout_toEndOf="@id/promo"
                android:text="@string/na"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/promo"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="3dp"
                android:text="@string/semester"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/semester_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/promo"
                android:layout_toEndOf="@+id/semester"
                android:text="@string/na"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gpa"
                android:layout_toStartOf="@+id/credits_content"
                android:layout_marginEnd="3dp"
                android:text="@string/credits"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/credits_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gpa"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:text="@string/na"
                android:textColor="#fff" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/messages_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_card" />
</RelativeLayout>